--- a/british-political-speech/Scraping British Political Speech.ipynb
+++ b/british-political-speech/Scraping British Political Speech.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1da68800",
+   "id": "bf53be87",
    "metadata": {},
    "source": [
     "# Scraping British Political Speech\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fb601ab7",
+   "id": "f6a89362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3de19dc6",
+   "id": "97ac5c8b",
    "metadata": {},
    "source": [
     "Then run that function across the first 1000 speech numbers - which results in 362 valid speeches."
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d24e003",
+   "id": "eba02b0b",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "529bc23d",
+   "id": "236d9578",
    "metadata": {},
    "source": [
     "We can tidy up a few columns:"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "00deb412",
+   "id": "2a91d4e0",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eee2ed25",
+   "id": "a4ada523",
    "metadata": {},
    "source": [
     "There's still some tidying to do for the speech content columns, but otherwise we should be good to go - save the dataframe to a csv:"
@@ -515,14 +515,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "bc079443",
+   "execution_count": 4,
+   "id": "1b6bb49e",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "path = Path().cwd()\n",
-    "speeches_df.to_csv(path / \"speeches_df.csv\")"
+    "speeches_df.to_csv(path / \"speeches_df.csv\", index = False)"
    ]
   }
  ],
