--- a/hansard-in-full/compressor.ipynb
+++ b/hansard-in-full/compressor.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1698ea50",
+   "execution_count": 1,
+   "id": "7ce5bb3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "def compress_folder(path):\n",
     "    import tarfile\n",
     "    # open destination path\n",
-    "    tar = tarfile.open(path+'.tar.gz', 'w:gz')\n",
+    "    tar = tarfile.open(path+'.tar.7z', 'w:7z')\n",
     "    tar.add(path, arcname=path)\n",
     "    tar.close()"
    ]
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0190531d",
+   "id": "83875b9b",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cf407cf9",
+   "id": "ab218ef8",
    "metadata": {},
    "outputs": [
     {
@@ -80,16 +80,6 @@
    ],
    "source": [
     "compress_csv('hansard_with_mp_details.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b0b11d71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "compress_folder('debates_xml')"
    ]
   }
  ],
