--- a/hansard-pmqs/pmqs_parser.ipynb
+++ b/hansard-pmqs/pmqs_parser.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a818889c",
+   "id": "9a469b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d959aea0",
+   "id": "433d10a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "506b26a7",
+   "id": "f1608fc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "833ceb39",
+   "id": "f34e67a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,15 +138,15 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1d44e3f7",
+   "id": "553bf8a1",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 13957/13957 [00:00<00:00, 25208.45it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████| 2450/2450 [03:43<00:00, 10.96it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 13976/13976 [00:01<00:00, 8171.65it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████| 2450/2450 [16:58<00:00,  2.41it/s]\n"
      ]
     },
     {
@@ -411,14 +411,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7d1c5b16",
+   "id": "082f54de",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 13957/13957 [00:01<00:00, 9771.43it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 13976/13976 [00:07<00:00, 1928.30it/s]\n"
      ]
     },
     {
@@ -506,53 +506,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13952</th>\n",
-       "      <td>uk.org.publicwhip/person/26060</td>\n",
-       "      <td>Ian</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['uk.org.publicwhip/lord/101673']</td>\n",
+       "      <th>13971</th>\n",
+       "      <td>uk.org.publicwhip/person/26079</td>\n",
+       "      <td>Nick</td>\n",
+       "      <td>Mathison</td>\n",
+       "      <td>['uk.org.publicwhip/member/90815']</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13953</th>\n",
-       "      <td>uk.org.publicwhip/person/26061</td>\n",
-       "      <td>Paulette</td>\n",
-       "      <td>Hamilton</td>\n",
-       "      <td>['uk.org.publicwhip/member/42744']</td>\n",
+       "      <th>13972</th>\n",
+       "      <td>uk.org.publicwhip/person/26080</td>\n",
+       "      <td>Kate</td>\n",
+       "      <td>Nicholl</td>\n",
+       "      <td>['uk.org.publicwhip/member/90822']</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13954</th>\n",
-       "      <td>uk.org.publicwhip/person/26062</td>\n",
-       "      <td>Jonathan</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['uk.org.publicwhip/lord/101675']</td>\n",
+       "      <th>13973</th>\n",
+       "      <td>uk.org.publicwhip/person/26081</td>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>O'Lynn</td>\n",
+       "      <td>['uk.org.publicwhip/member/90824']</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13955</th>\n",
-       "      <td>uk.org.publicwhip/person/26063</td>\n",
-       "      <td>Paul</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['uk.org.publicwhip/lord/101676']</td>\n",
+       "      <th>13974</th>\n",
+       "      <td>uk.org.publicwhip/person/26082</td>\n",
+       "      <td>Alan</td>\n",
+       "      <td>Robinson</td>\n",
+       "      <td>['uk.org.publicwhip/member/90829']</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13956</th>\n",
-       "      <td>uk.org.publicwhip/person/26064</td>\n",
-       "      <td>Paul</td>\n",
-       "      <td>Rankin</td>\n",
-       "      <td>['uk.org.publicwhip/member/90745']</td>\n",
+       "      <th>13975</th>\n",
+       "      <td>uk.org.publicwhip/person/26083</td>\n",
+       "      <td>Eóin</td>\n",
+       "      <td>Tennyson</td>\n",
+       "      <td>['uk.org.publicwhip/member/90835']</td>\n",
        "      <td>{}</td>\n",
-       "      <td>{('2022-03-14', '2022-05-13'): 'DUP'}</td>\n",
+       "      <td>{}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>13957 rows × 6 columns</p>\n",
+       "<p>13976 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -563,11 +563,11 @@
        "3      uk.org.publicwhip/person/10004       Nick      Ainger   \n",
        "4      uk.org.publicwhip/person/10005        Bob   Ainsworth   \n",
        "...                               ...        ...         ...   \n",
-       "13952  uk.org.publicwhip/person/26060        Ian         NaN   \n",
-       "13953  uk.org.publicwhip/person/26061   Paulette    Hamilton   \n",
-       "13954  uk.org.publicwhip/person/26062   Jonathan         NaN   \n",
-       "13955  uk.org.publicwhip/person/26063       Paul         NaN   \n",
-       "13956  uk.org.publicwhip/person/26064       Paul      Rankin   \n",
+       "13971  uk.org.publicwhip/person/26079       Nick    Mathison   \n",
+       "13972  uk.org.publicwhip/person/26080       Kate     Nicholl   \n",
+       "13973  uk.org.publicwhip/person/26081   Patricia      O'Lynn   \n",
+       "13974  uk.org.publicwhip/person/26082       Alan    Robinson   \n",
+       "13975  uk.org.publicwhip/person/26083       Eóin    Tennyson   \n",
        "\n",
        "                                             memberships  \\\n",
        "0      ['uk.org.publicwhip/member/2069', 'uk.org.publ...   \n",
@@ -576,11 +576,11 @@
        "3      ['uk.org.publicwhip/member/2321', 'uk.org.publ...   \n",
        "4      ['uk.org.publicwhip/member/2323', 'uk.org.publ...   \n",
        "...                                                  ...   \n",
-       "13952                  ['uk.org.publicwhip/lord/101673']   \n",
-       "13953                 ['uk.org.publicwhip/member/42744']   \n",
-       "13954                  ['uk.org.publicwhip/lord/101675']   \n",
-       "13955                  ['uk.org.publicwhip/lord/101676']   \n",
-       "13956                 ['uk.org.publicwhip/member/90745']   \n",
+       "13971                 ['uk.org.publicwhip/member/90815']   \n",
+       "13972                 ['uk.org.publicwhip/member/90822']   \n",
+       "13973                 ['uk.org.publicwhip/member/90824']   \n",
+       "13974                 ['uk.org.publicwhip/member/90829']   \n",
+       "13975                 ['uk.org.publicwhip/member/90835']   \n",
        "\n",
        "                                          constituencies  \\\n",
        "0      {('1987-06-11', '1992-03-16'): 'Hackney North ...   \n",
@@ -589,11 +589,11 @@
        "3      {('1992-04-09', '1997-04-08'): 'Pembroke', ('1...   \n",
        "4      {('1992-04-09', '1997-04-08'): 'Coventry North...   \n",
        "...                                                  ...   \n",
-       "13952                                                 {}   \n",
-       "13953                                                 {}   \n",
-       "13954                                                 {}   \n",
-       "13955                                                 {}   \n",
-       "13956                                                 {}   \n",
+       "13971                                                 {}   \n",
+       "13972                                                 {}   \n",
+       "13973                                                 {}   \n",
+       "13974                                                 {}   \n",
+       "13975                                                 {}   \n",
        "\n",
        "                                                 parties  \n",
        "0      {('1997-05-01', '2001-05-14'): 'Labour', ('200...  \n",
@@ -602,13 +602,13 @@
        "3      {('1997-05-01', '2001-05-14'): 'Labour', ('200...  \n",
        "4      {('1997-05-01', '2001-05-14'): 'Labour', ('200...  \n",
        "...                                                  ...  \n",
-       "13952                                                 {}  \n",
-       "13953                                                 {}  \n",
-       "13954                                                 {}  \n",
-       "13955                                                 {}  \n",
-       "13956              {('2022-03-14', '2022-05-13'): 'DUP'}  \n",
+       "13971                                                 {}  \n",
+       "13972                                                 {}  \n",
+       "13973                                                 {}  \n",
+       "13974                                                 {}  \n",
+       "13975                                                 {}  \n",
        "\n",
-       "[13957 rows x 6 columns]"
+       "[13976 rows x 6 columns]"
       ]
      },
      "metadata": {},
@@ -665,15 +665,15 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7b349553",
+   "id": "c0690fdc",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 36241/36241 [00:01<00:00, 18424.59it/s]\n",
-      "100%|█████████████████████████████████████████████████████████████████████████| 36241/36241 [00:01<00:00, 18611.89it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 36241/36241 [00:10<00:00, 3546.62it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████| 36241/36241 [00:10<00:00, 3490.46it/s]\n"
      ]
     },
     {
@@ -730,7 +730,7 @@
        "      <td>Margaret</td>\n",
        "      <td>Thatcher</td>\n",
        "      <td>Finchley</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Conservative</td>\n",
        "      <td>\\nThis morning I presided at a meeting of the ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -748,7 +748,7 @@
        "      <td>Margaret</td>\n",
        "      <td>Thatcher</td>\n",
        "      <td>Finchley</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Conservative</td>\n",
        "      <td>\\nI was asked at a press conference whether I ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -766,7 +766,7 @@
        "      <td>Margaret</td>\n",
        "      <td>Thatcher</td>\n",
        "      <td>Finchley</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Conservative</td>\n",
        "      <td>\\nI shall gladly do that. I feel sure that tha...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -784,7 +784,7 @@
        "      <td>Margaret</td>\n",
        "      <td>Thatcher</td>\n",
        "      <td>Finchley</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Conservative</td>\n",
        "      <td>\\nThe hon. Gentleman is trying to do exactly w...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -802,7 +802,7 @@
        "      <td>Margaret</td>\n",
        "      <td>Thatcher</td>\n",
        "      <td>Finchley</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Conservative</td>\n",
        "      <td>\\nI entirely accept what my hon. Friend says. ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -985,11 +985,11 @@
        "36240                                Boris Johnson              Boris   \n",
        "\n",
        "      answerer_familyname       answerer_constituency answerer_party  \\\n",
-       "0                Thatcher                    Finchley           None   \n",
-       "1                Thatcher                    Finchley           None   \n",
-       "2                Thatcher                    Finchley           None   \n",
-       "3                Thatcher                    Finchley           None   \n",
-       "4                Thatcher                    Finchley           None   \n",
+       "0                Thatcher                    Finchley   Conservative   \n",
+       "1                Thatcher                    Finchley   Conservative   \n",
+       "2                Thatcher                    Finchley   Conservative   \n",
+       "3                Thatcher                    Finchley   Conservative   \n",
+       "4                Thatcher                    Finchley   Conservative   \n",
        "...                   ...                         ...            ...   \n",
        "36236             Johnson  Uxbridge and South Ruislip   Conservative   \n",
        "36237             Johnson  Uxbridge and South Ruislip   Conservative   \n",
@@ -1082,6 +1082,16 @@
     "         'answerer_id','answerer_name','answerer_firstname','answerer_familyname','answerer_constituency','answerer_party','answer_text']]\n",
     "\n",
     "display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d60f8130",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('hansard_pmqs.csv')"
    ]
   }
  ],
