PMQs back to 1945 w/ updated MP data

--- a/hansard-in-full/mps_data.ipynb
+++ b/hansard-in-full/mps_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b078f2cd",
+   "id": "4f4838b4",
    "metadata": {},
    "source": [
     "# MPs data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1155f6ad",
+   "id": "d722465d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6de2313f",
+   "id": "10e68e8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,14 +63,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "397db0f8",
+   "id": "181388cc",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 14023/14023 [00:00<00:00, 27696.39it/s]\n"
+      "100%|███████████████████████████████████████████████████████| 14023/14023 [00:00<00:00, 47353.56it/s]\n"
      ]
     },
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "996dfed9",
+   "id": "4d95025c",
    "metadata": {},
    "outputs": [
     {
@@ -414,14 +414,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "59b887ba",
+   "id": "d91a831c",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 14023/14023 [06:56<00:00, 33.65it/s]\n"
+      "100%|█████████████████████████████████████████████████████████| 14023/14023 [02:00<00:00, 116.06it/s]\n"
      ]
     },
     {
@@ -591,14 +591,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bb6d1380",
+   "id": "fee91da9",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████| 14023/14023 [00:00<00:00, 104221.41it/s]\n"
+      "100%|██████████████████████████████████████████████████████| 14023/14023 [00:00<00:00, 373612.69it/s]\n"
      ]
     },
     {
@@ -812,14 +812,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f3ab6173",
+   "id": "1f4e1cca",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████| 14023/14023 [00:00<00:00, 143178.15it/s]\n"
+      "100%|██████████████████████████████████████████████████████| 14023/14023 [00:00<00:00, 539380.30it/s]\n"
      ]
     },
     {
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f854e931",
+   "id": "0b199194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,20 +1075,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "a6651fa9",
+   "execution_count": 9,
+   "id": "32074b0a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We're missing party IDs for Margaret Thatcher and John Major...\n",
-    "people_df.iloc[1026,:].parties = {('1959-10-08','2013-04-08'):'Conservative'} # Thatcher\n",
-    "people_df.iloc[407,:].parties = {('1979-05-03','2001-05-14'):'Conservative'} # Major"
+    "# We're missing party IDs for some Prime Ministers...\n",
+    "people_df.loc[9628,:].parties = {('1900-10-01','1964-09-25'):'Conservative'} # Churchill \n",
+    "people_df.loc[4517,:].parties = {('1922-11-15','1955-12-16'):'Labour'} # Attlee\n",
+    "people_df.loc[5282,:].parties = {('1923-12-06','1957-01-11'):'Conservative'} # Eden\n",
+    "people_df.loc[6261,:].parties = {('1924-10-29','1964-09-25'):'Conservative'} # Macmillan\n",
+    "people_df.loc[5205,:].parties = {('1931-10-27','1974-09-20'):'Conservative'} # Douglas-Home\n",
+    "people_df.loc[9917,:].parties = {('1945-07-05','1983-05-13'):'Labour'} # Wilson\n",
+    "people_df.loc[269,:].parties = {('1950-02-23','2001-05-14'):'Conservative'} # Heath\n",
+    "people_df.loc[1688,:].parties = {('1945-07-05','1987-05-18'):'Labour'} # Callaghan\n",
+    "people_df.loc[1026,:].parties = {('1959-10-08','2013-04-08'):'Conservative'} # Thatcher\n",
+    "people_df.loc[407,:].parties = {('1979-05-03','2001-05-14'):'Conservative'} # Major\n",
+    "people_df.loc[46,:].parties = {('1983-06-09','2007-06-27'):'Labour'} # Blair\n",
+    "people_df.loc[67,:].parties = {('1983-06-09','2015-03-30'):'Labour'} # Brown\n",
+    "people_df.loc[689,:].parties = {('2001-06-07','2016-09-12'):'Conservative'} # Cameron\n",
+    "people_df.loc[425,:].parties = {('1997-05-01','2022-05-26'):'Conservative'} # May\n",
+    "people_df.loc[722,:].parties = {('2001-06-07','2022-05-26'):'Conservative'} # Johnson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "d6bf6f47",
+   "execution_count": 10,
+   "id": "7a9a5657",
    "metadata": {},
    "outputs": [],
    "source": [
