MPs data updated with PMs back to 1900

--- a/hansard-in-full/mps_data.ipynb
+++ b/hansard-in-full/mps_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4f4838b4",
+   "id": "82cf97f5",
    "metadata": {},
    "source": [
     "# MPs data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d722465d",
+   "id": "99be7e6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10e68e8c",
+   "id": "8ffbbf6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,14 +63,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "181388cc",
+   "id": "35313e08",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████| 14023/14023 [00:00<00:00, 47353.56it/s]\n"
+      "100%|██████████| 14023/14023 [00:00<00:00, 51366.08it/s]\n"
      ]
     },
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4d95025c",
+   "id": "65ab8ce6",
    "metadata": {},
    "outputs": [
     {
@@ -414,14 +414,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d91a831c",
+   "id": "fcc6d31b",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████| 14023/14023 [02:00<00:00, 116.06it/s]\n"
+      "100%|██████████| 14023/14023 [02:02<00:00, 114.94it/s]\n"
      ]
     },
     {
@@ -591,14 +591,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fee91da9",
+   "id": "de3acf25",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████| 14023/14023 [00:00<00:00, 373612.69it/s]\n"
+      "100%|██████████| 14023/14023 [00:00<00:00, 312411.23it/s]\n"
      ]
     },
     {
@@ -812,14 +812,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1f4e1cca",
+   "id": "46bc2057",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████| 14023/14023 [00:00<00:00, 539380.30it/s]\n"
+      "100%|██████████| 14023/14023 [00:00<00:00, 424933.35it/s]\n"
      ]
     },
     {
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0b199194",
+   "id": "8686fed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,11 +1076,20 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "32074b0a",
+   "id": "0828eb1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We're missing party IDs for some Prime Ministers...\n",
+    "##### We're missing party IDs for some Prime Ministers...\n",
+    "people_df.loc[10267,:].parties = {('1853-08-22','1903-08-22'): 'Conservative'} # Gascoyne-Cecil\n",
+    "people_df.loc[3656,:].parties = {('1874-01-31','1922-05-05'): 'Conservative'} # Balfour\n",
+    "people_df.loc[4357,:].parties = {('1868-11-17','1908-04-22'): 'Liberal'} # Campbell-Bannerman\n",
+    "people_df.loc[3678,:].parties = {('1886-07-01','1924-10-09'): 'Liberal'} # Asquith\n",
+    "people_df.loc[3676,:].parties = {('1890-04-10','1945-01-12'): 'Liberal'} # Lloyd George\n",
+    "people_df.loc[8686,:].parties = {('1900-10-01','1923-10-30'): 'Conservative'} # Bonar Law\n",
+    "people_df.loc[8729,:].parties = {('1908-02-29','1937-06-01'): 'Conservative'} # Baldwin\n",
+    "people_df.loc[8690,:].parties = {('1906-01-12','1937-11-09'): 'Labour'} # MacDonald\n",
+    "people_df.loc[9034,:].parties = {('1918-12-14','1940-11-09'): 'Conservative'} # Chamberlain\n",
     "people_df.loc[9628,:].parties = {('1900-10-01','1964-09-25'):'Conservative'} # Churchill \n",
     "people_df.loc[4517,:].parties = {('1922-11-15','1955-12-16'):'Labour'} # Attlee\n",
     "people_df.loc[5282,:].parties = {('1923-12-06','1957-01-11'):'Conservative'} # Eden\n",
@@ -1101,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7a9a5657",
+   "id": "dcabbb8f",
    "metadata": {},
    "outputs": [],
    "source": [
