--- a/analysis/scorers/test.ipynb
+++ b/analysis/scorers/test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "d73651ea",
+   "execution_count": 91,
+   "id": "fc76d1af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "import regex as re\n",
     "import os\n",
     "from nltk.stem import WordNetLemmatizer\n",
+    "from cleaning import *\n",
     "\n",
     "# Load pre-trained TensorFlow model\n",
-    "saved_model_path = '/objectivity_vs_subjectivity/subjectivity_classifier/'\n",
+    "saved_model_path = os.path.join(os.getcwd(),'objectivity_vs_subjectivity\\subjectivity_classifier')\n",
     "subjectivity_estimator = tf.saved_model.load(saved_model_path)\n",
     "\n",
     "# Speculative cues taken from \n",
@@ -33,13 +35,28 @@
     "subjective_adjective_list = pd.read_csv('https://people.cs.pitt.edu/~wiebe/pubs/aaai00/adjsMPQA', header=None)[0].to_list()\n",
     "subjective_adjective_list = [word.strip() for word in subjective_adjective_list]\n",
     "\n",
-    "def measure_subjective_sentence_freq(sent_list):\n",
-    "    subjective_sent_count = None\n",
-    "    return subjective_sent_count/len(sent_list)\n",
+    "def measure_subjective_sentence_freq(sent_list, subjectivity_estimator=subjectivity_estimator):\n",
+    "    subjectivity_predictions = []\n",
+    "    # For each sentence:\n",
+    "    for sent in sent_list:\n",
+    "        example = tf.train.Example() # ...prepare an example for the sentence to be wrapped in\n",
+    "        example.features.feature['sentence'].bytes_list.value.extend([bytes(sent, \"utf-16\")]) # ...encode the sentence as UTF-18\n",
+    "        subjectivity_predictions.append(subjectivity_estimator.signatures['predict'](examples=tf.constant([example.SerializeToString()]))['class_ids'][0][0].numpy()) # ...append subjectivity prediction to list\n",
+    "    return sum(subjectivity_predictions)/len(subjectivity_predictions)\n",
+    "\n",
+    "def measure_avg_subjective_sentence_score(sent_list, subjectivity_estimator=subjectivity_estimator):\n",
+    "    subjectivity_predictions = []\n",
+    "    # For each sentence:\n",
+    "    for sent in sent_list:\n",
+    "        example = tf.train.Example() # ...prepare an example for the sentence to be wrapped in\n",
+    "        example.features.feature['sentence'].bytes_list.value.extend([bytes(sent, \"utf-16\")]) # ...encode the sentence as UTF-18\n",
+    "        subjectivity_predictions.append(subjectivity_estimator.signatures['predict'](examples=tf.constant([example.SerializeToString()]))['probabilities'][0][1].numpy()) # ...append subjectivity score to list\n",
+    "    return mean(subjectivity_predictions)\n",
     "\n",
     "def measure_speculative_sentence_freq(sent_list, speculative_cues=speculative_cues):\n",
     "    wnl = WordNetLemmatizer()\n",
-    "    lemmatised_sent_list = [[wnl.lemmatize(word) for word in sent] for sent in sent_list]\n",
+    "    cleaned_sent_list = [clean(sent) for sent in sent_list]\n",
+    "    lemmatised_sent_list = [[wnl.lemmatize(word) for word in sent] for sent in cleaned_sent_list]\n",
     "    speculative_sent_count = sum([1 for lemma_sent in lemmatised_sent_list if any([lemma in speculative_cues for lemma in lemma_sent])])\n",
     "    return speculative_sent_count/len(sent_list)\n",
     "\n",
@@ -54,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "124e00fc",
+   "execution_count": 93,
+   "id": "f0dee3c3",
    "metadata": {},
    "outputs": [
     {
@@ -68,18 +85,18 @@
     }
    ],
    "source": [
-    "high_freq = measure_speculative_sentence_freq([['this','sentence','can','have','more','speculative','cues'],\n",
-    "                                               ['however','i','think','that','this','sentence','has','enough']])\n",
-    "low_freq = measure_speculative_sentence_freq([['this','sentence','has','no','speculative','cues'],\n",
-    "                                              ['this','sentence','has','none','also']])\n",
+    "high_freq = measure_speculative_sentence_freq(['This sentence could have more speculative clues',\n",
+    "                                               'However, I think this sentence probably has enough'])\n",
+    "low_freq = measure_speculative_sentence_freq(['This sentence has no speculative clues',\n",
+    "                                              'This sentence has none also'])\n",
     "print(\"High speculation frequency: {:.1%}\".format(high_freq))\n",
     "print(\"Low speculation frequency: {:.1%}\".format(low_freq))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "2051ece6",
+   "execution_count": 94,
+   "id": "36c805c6",
    "metadata": {},
    "outputs": [
     {
@@ -100,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "46518808",
+   "execution_count": 95,
+   "id": "f6b72a70",
    "metadata": {},
    "outputs": [
     {
